--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,3 +21,13 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run scrape
+    - name: check for changes
+      run: git status
+    - name: stage changed files
+      run: git add .
+    - name: commit changed files
+      run: git commit -m "Auto updating google-reviews.js"
+    - name: fetch from master
+      run: git fetch origin master
+    - name: push code to master
+      run: git push origin HEAD:master
