--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
     "file-firstline-replace": "^0.0.3",
-    "puppeteer": "^24.0.0"
+    "puppeteer": "^24.0.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "random-useragent": "^0.5.0"
   },
   "scripts": {
     "scrape": "node scraper.js"
