--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
   "dependencies": {
     "file-firstline-replace": "^0.0.3",
-    "puppeteer": "^24.0.0",
-    "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "random-useragent": "^0.5.0"
+    "puppeteer-real-browser": "^1.3.22"
   },
   "scripts": {
     "scrape": "node scraper.js"
