--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "file-firstline-replace": "^0.0.3",
-    "puppeteer-real-browser": "^1.3.22"
+    "puppeteer": "^24.1.0"
   },
   "scripts": {
     "scrape": "node scraper.js"
