going to try something different

--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
     "puppeteer": "^24.1.0"
   },
   "scripts": {
-    "scrape": "node scraper.js"
+    "scrape": "node --env-file=.env scraper.js"
   }
 }
